--- a/templates/login.html
+++ b/templates/login.html
@@ -28,26 +28,38 @@
     <div id="message"></div>
 
     <script>
-        document.getElementById('login-form').addEventListener('submit', function(event) {
+       document.getElementById('login-form').addEventListener('submit', function(event) {
             event.preventDefault();
             var formData = new FormData(this);
+
+            // Construct a JavaScript object from the FormData
+            var formDataObject = {};
+            formData.forEach(function(value, key) {
+                formDataObject[key] = value;
+            });
+
+            // Stringify the JavaScript object
+            var jsonData = JSON.stringify(formDataObject);
+
             fetch('/auth/login', {
                 method: 'POST',
-                body: JSON.stringify(Object.fromEntries(formData.entries())),
+                body: jsonData,
                 headers: {
                     'Content-Type': 'application/json'
                 }
             })
-            .then(response => response.json())
-            .then(data => {
-                document.getElementById('message').innerText = data.message;
-                if(data.success) {
-                    document.getElementById('login-form').reset();
-                    window.location.href = '/dashboard';
+            .then(response => {
+                if (response.status === 201) {
+                    window.location.href = '/dashboard'; // Redirect to dashboard for status 201
+                } else if (response.status === 202) {
+                    window.location.href = 'first-login/' + formData.get('email'); // Redirect to login page with email for status 202
+                } else {
+                    throw new Error('Unexpected response status: ' + response.status); // Throw an error for unexpected status
                 }
             })
             .catch(error => console.error('Error:', error));
         });
+
     </script>
      </div>
     </div>
