--- a/templates/create_user.html
+++ b/templates/create_user.html
@@ -34,6 +34,8 @@
         <input type="submit" value="Register">
     </form>
 
+            <a href="/dashboard" class="btn btn-primary">Go Back</a>
+
       <div id="message"></div>
 
     <script>
@@ -52,7 +54,7 @@
                 document.getElementById('message').innerText = data.message;
                 if(data.success) {
                     document.getElementById('create-form').reset();
-                    window.location.href = '/all_users';
+                    window.location.href = '/users';
                 }
             })
             .catch(error => console.error('Error:', error));
